# psychC

./: .gitignore  CMakeLists.txt  qrenderdoc.cap  readme.md  readme.txt  todo
docs/: build.md  gltf_animation.md  rendering.md  resource_management.md
shaders/: actor.vs  env.fs  env.vs  fragment.fs  raymarch  simple_vert  vertex.vs
src/: actor.c  actor.h  alhelper.c  alhelper.h  boiler.c  boiler.h  camera.c  camera.h  cgltfHelper.c  cgltfhelper.h  constants.h  disk.c  disk.h  env.c  env.h  glad.c  impls.c  input.c  input.h  log.c  log.h  main.c  mesh.h  pretty.c  pretty.h  rendering architecture  shader.c  shader.h  util.c  util.h  wave.c  wave.h
src/glad/: glad.h
test/: disk_test.c  init_glfw_window.c  parse_json.c  play_sound.c  scene.json  sound_play_file.c
